--- a/1.0_Introduction.md
+++ b/1.0_Introduction.md
@@ -1,6 +1,8 @@
 # 1.0 Introduction
 
-*QuestWorlds* is a roleplaying rules engine suitable for you to play in any genre.  
+*Rivers of Sartar* is a unnofficial adaptation of the questworld engine to Chaosium's world of Glorantha. 
+
+It changes certain aspects of the questworlds core mechanics to support the direct use of Chaosium-produced supplements such as the *Gloranthan Bestiary*, *Red Book of Magic* and *Cults of Runequest*.
 
 It is a traditional roleplaying game in that there is a GM and players. The players play characters, each guided by the internal thoughts of their character as to what decisions they make, and the GM plays the world, including non-player characters (NPCs) and abstract threats.
 
