--- a/0.2_Credits.md
+++ b/0.2_Credits.md
@@ -1,20 +1,8 @@
 ## 0.2 Credits
 
-Original Rules: Robin D. Laws
+Original Rules: Richard Melvin
 
-Lead System Development: Ian Cooper
+Markdown Publication scripts, intorductory text and overall organisation: Ian Cooper
 
-Editing – Assistant Development – Copyediting: Susan O’Brien
-
-Assistant Development: Shawn Carpenter, Jonathan Laufersweiler, James Lowder, Michael O’Brien, Jeff Richard, David Scott
-
-Further Development: Greg Stafford, David Dunham, Mark Galeotti, Neil Robinson, Adam RKitch, Roderick Robinson, Lawrence Whitaker,  
-
-A modified version of Chained Contests and Plot Edits from *Mythic Russia* © copyright 2006, 2010 Mark Galeotti; developed by Graham Robinson (for “Chained Contests”) appears in this game and is added as Open Game Content here with permission.
-
-Material in *Section 1, Introduction* and *Section 2, Basic Mechanics* © copyright 2018 Jonathan Laufersweiler and added as Open Game Content here with permission.
-
-Material in *Section 2, Basic Mechanics* © copyright 2020 Shawn Carpenter and added as Open Game Content here with permission.
-
-QuestWorlds SRD with annotations for individual contributions can be found at GitHub: [https://github.com/ChaosiumInc/QuestWorlds/pulls](https://github.com/ChaosiumInc/QuestWorlds/pulls).
+QuestWorlds SRD with annotations for individual contributions can be found at GitHub: https://github.com/ChaosiumInc/QuestWorlds/pulls.
 
