still initial setup

--- a/0.2_Credits.md
+++ b/0.2_Credits.md
@@ -2,7 +2,7 @@
 
 Original Rules: Richard Melvin
 
-Markdown Publication scripts, intorductory text and overall organisation: Ian Cooper
+Markdown Publication scripts, introductory text and overall organisation: Ian Cooper and the questworlds team.
 
 QuestWorlds SRD with annotations for individual contributions can be found at GitHub: https://github.com/ChaosiumInc/QuestWorlds/pulls.
 
