restore intro diag

--- a/markdown/cults/2.1_Clans.md
+++ b/markdown/cults/2.1_Clans.md
@@ -1,5 +1,7 @@
 
-# Clans
+# Cult Expressions
+
+## Clans
 
 The previous blog entry described Rune Cults in abstract rules terms. This by itself is enough for running an adventure-focused game, where rune cults serve a game function much like that of D&D character classes. 
 
@@ -19,9 +21,9 @@ For each case, there are three perspectives; the Otherworld of gods and spirits,
 Note that in Dragon Pass, almost all clans are organised into tribes and tribal federations, which add an extra level of complexity and options. These will will be looked at in the next part of this series.
 
 
-## Valind Clan
+### Valind Clan
 
-!(valind-clan.png)
+![](valind-clan.png)
 
 Some clans support initiation into only a single rune or spirit cult; clan and cult membership are synonymous. Clans following this pattern are commonly run by the senior Rune Priest, Shaman Priest or Rune Lord. It is possible for a senior initiate to temporarily lead a clan, but such a clan will be greatly magically weakened if a more appropriate replacement is not soon found.
 
@@ -42,11 +44,11 @@ Some God Learners speculated that this was the primordial form of social organis
 
 Some cult-based organisations like Storm Bull warbands, Yggite pirate crews and Gagarthi  bandit gangs have a similar organisation internally. However, they are not usually counted as clans as they rarely bring up children. It would be highly unusual to be born into one; instead you join them in adulthood.
 
-## Asrelian Great  Temple 
+### Asrelian Great Temple 
 
 Sometimes, great or major temples of a cult own and control their own lands, within which people are born and raised. Within those lands, the cult is entirely dominant, structuring society as much as a primordial clan does. Other examples include the Paps in Prax, Old Wind in Sartar, and the Shaker Temple in Tarsh. However, due to the size and magical power of temples of that size, an additional level of complexity is present. This corresponding to the RQ:G term subordinate cult.
 
-!(aslrelia-clan.png)
+![](asrelian-clan.png)
 
 Some great temples and temple complexes, whether they count as clans or not, support subordinate cults. These are run by Specialist Priests, typically of Godtalker rank. These report to the temple High Priestess, tend a shrine, and worship a lesser deity who resides at the otherwold home of the great deity in question. Such specialist priests are recruited from the general population of cult initiates; there is not a separate community of those dedicated to the subordinate cult. Consequently, there will pretty much never be a full cult writeup available, as the number of actual members of the subordinate cult is negligible.
 
@@ -56,13 +58,13 @@ For example, in Esrolia, the independent Great Temple  Asrelia's Retreat maintai
 
 Great temples can be interesting and useful places to visit, if only because they contain magic available nowhere else. However, they make a poor setting for a typical campaign, as there is still only a single cult that initiates must belong to.
 
-## Orlanth Thunderous Clan
+### Orlanth Thunderous Clan
 
 One common pattern of clan worship is where a clan supports two temples to two associated cults, representing deities who are husband and wife. Normally, when a clan worships two cults, this causes divisions within the community,. This weakens the wyter and commonly leads to the split of the clan into two. Having the two cults be segregated by gender, and then tied together by marriage avoids that. The two temples share a shrine (or sometimes two shrines) representing the bond. This makes available the two rune spells listed under the associated cults section of their writeup. For example, for a clan focused around Orlanth Thunderous and Ernalda, the shrine would make available Heal Body and Cloud Call.
 
 The work of tending the shrine is shared between the two priesthoods. The clan is led by a Chieftan, who ideally should qualify as a Rune Lord and/or Priest. Note that the rules section 'Chief priest' applies to either; the chieftan of an Orlanthi clan is only required to be an initiate of Orlanth.
 
-!(orlanth-clan.png)
+![](orlanth-clan.png)
 
 As the Orlanth Rune Cult write-up is split into subcults, it is necessary to specify which one the clan temple corresponds to; in this case Orlanth Thunderous. The Ernalda cult write-up is not so split, so the temple is described by the writeup directly. This should not be taken to mean that all clan-level Ernalda temples are identical, merely that there is no systematic pattern to how they vary.
 
