--- a/markdown/cults/2.2_Tribes.md
+++ b/markdown/cults/2.2_Tribes.md
@@ -1,5 +1,5 @@
 
-#Tribes
+## Tribes
 
 The previous blog entry described how clans work in the Runequest rules. However, in Dragon Pass, almost all clans are organised into tribes and tribal federations, which add an extra level of complexity and options. As such, to a clan member, being part of a tribe offers opportunities that a clan by itself could not support.
 
@@ -11,9 +11,9 @@ In Prax, the Waha cult teaches tribal khans to summon a legendary founder.
 In and near Dragon Pass, the Orlanth Rex subcult anoints tribal kings (also know as a Rex).
 It is likely others exist elsewhere in Glorantha.
 
-## Waha Tribe
+### Waha Tribe
 
-PlantUML diagram
+![](waha.png)
 
 The animal nomads of Prax are organised  into tribes, where each tribe is a specific type of riding animal (bison, high llama, and so on). As nomads, they have very limited access to temples, which must be portable to move with the herd. So they mostly rely on shamanic priests of Waha, and Eiritha priestesses trained at the single major temple complex of the Paps.
 
@@ -25,9 +25,9 @@ The cults of Waha and Eiritha provide the necessities of survival, and so are th
 
  
 
-## Orlanth Rex Tribe
+### Orlanth Rex Tribe
 
-PlantUML diagram
+![](rex-tribe.png)
 
 The Orlanthi tribes of Dragon Pass are organised alliances between clans, which are the fundamental social unit. Clans can leave one tribe and join another while keeping their identity. 
 
