--- a/markdown/cults/2.3_Cities.md
+++ b/markdown/cults/2.3_Cities.md
@@ -1,11 +1,10 @@
 
-# Cities
+## Urban Temples
 
 One traditional British definition of a city is a town with a cathedral. In RQ:G, a corresponding rule of thumb is a that a city is a settlement with multiple _distinct_ temples. A city has too many people for them all to worship together as one community. And unlike a tribal town, the majority of the population are permanent residents, not just visiting for special occasions. So they have no other community to belong to.
 
 The central settlement of a large clan, or a tribe, might hit perhaps a thousand adults. Two thousand is a very small city; the largest Gloranthan city, Nochet in Esrolia, has a population of more than 100,000. This means sharing a street with strangers, including ones who worship gods who might be strange to you. 
 
-Within a rural clan, most free adults are initiates of the primary cult or cults of the clan. In contrast, a city resident effectively has a individual choice of where to worship. Initiation is a big commitment of time and energy, and progressing further requires an exclusive commitment. But most cults offer lay membership with a minimal commitment. So the residents of a city generally are lay members of several cults, initiates of one or perhaps two. 
 
 Within a city, you will find:
 
@@ -15,7 +14,9 @@ Within a city, you will find:
 
 - *secret societies*, actual cults covertly worshipping gods considered chaotic, evil or just hostile by the official temples of the city.
 
-Many of these are tied together by ties of association, mythically represented by births, marriages or cooperation amongst the deities of the cults involved. Practically, this involves joint ceremonies performed between the cults, or worship sites maintained by both. The holy day calendar indicates the best times for this; on the right day, lay members from the general population of the city can outnumber the regular congregation.
+Many of these are tied together by ties of association, mythically represented by births, marriages or cooperation amongst the deities of the cults involved. Practically, this involves joint ceremonies performed between the cults, or worship sites maintained by both. The holy day calendar indicates the best times for this; on the right day, lay members from the general population of the city can outnumber the regular congregation. 
+
+Within a rural clan, most free adults are initiates of the main cults of the clan, or their associates. In contrast, a city resident effectively has a individual choice of where to worship, from a menu with ten or more options. Initiation is a big commitment of time and energy, and progressing further requires an exclusive commitment. But most cults offer lay membership with a minimal commitment. So the residents of a city generally are lay members of several cults, initiates of one or perhaps two. 
 
 Any Rune Magic that can be shared between cults in this way is sometimes as much as valued as proof of the mythical truth of the association as it is for its practical use.  
 
@@ -26,7 +27,7 @@ Consequently, heroquesting to reveal a new myth becomes a continuation of politi
 How this all works out varies between cities, in a way that is best explained by examples. The examples that follow are all taken from Lands of Runequest: Dragon Pass, and are representative or Earth, Sartarite and Lunar cities respectively.
 
 
-## Earth City: Dolsonin
+### Earth City: Dolsonin
 
 ![](dolsonin-city.png)
 
@@ -39,7 +40,7 @@ In contrast, an Orlanth initiate could learn Barntar spells at the Ernalda templ
 Note that in peaceful Holay, as opposed to historically rebellious Tarsh and occupied Sartar, the open worship of Orlanth is permitted.
 
 
-## Sartarite City: Wilmskirk
+### Sartarite City: Wilmskirk
 
 ![](wilmskirk-city.png)
 
