--- a/markdown/cults/3.1_Subcults.md
+++ b/markdown/cults/3.1_Subcults.md
@@ -92,7 +92,7 @@ The cult likes those who both support and defend their community. It can look do
 
 Urban temples to Heler in Esrolia, and the barracks temple of the Water Brother Marines. All temples dedicated to the subcult are small.
 
-image.png.54c805bef6bed1fd494485b02ee11d47.png
+![](heler-subcult.png)
 
 ### Ranks
 
