published urban temples blog

--- a/markdown/rivers/5.1_Engagement.md
+++ b/markdown/rivers/5.1_Engagement.md
@@ -1,44 +1,39 @@
 ### Engagement
 
-In Rivers of Sartar, the first step of tactical gameplay is Engagement. This takes a big complex combat and splits it into a series of individual fights that, for this combat round, can be processed independantly.
+In Rivers of Sartar, the first step of tactical gameplay is Engagement. This takes a big complex combat and splits it into a series of individual fights that, for this combat round, can be processed independently.
 
-image.png.a05f10212536e6fe42d0a984880ea96a.png
+
+![](engagement.png)
+ 
+So in the above example, 3 broos face off against 2 warrior PCs and their non-combatant ally. After the engagement procedure, it turns out that the first PC will fight two of the broo, and the second the third. The NPC ally is free to heal, buff or just cower.
 
  
-
- 
-
-So in the above example, 3 broos face off against 2 warrior PCs and their non-combatant ally. After the engagement procedure, it turns out that the first PC will fight two of the broo, and the second the thrid. The NPC ally is free to heal, buff or just cower.
-
- 
-
 #### Rules as Written
 
-image.png.1911a3fa2a3bc0c3eb6ba5623dd31db1.png
+![](rq-melee.png)
 
 Engagement in RQ:G is part of the Statement of Intent Phase. It is often taken to be synonymous with engagement in melee, but that does not seem to be intent of the rules. As the Rules Q+A says:
 
-  Quote
- 
-
+```
 I pull out my bow and fire an arrow at an opponent 20m away. He Dodges it. Are we, thus, engaged?
 
 Yes. One is preparing to shoot the other. The other is watching waiting to dodge. You were engaged at the moment in the statement of intent where you said you would fire an arrow at an opponent 20m away and the GM said that the target would try and dodge.
 
- 
+```
 
-Expand  
-The rules do say that unengaged characters move in a seperate phase before engaged ones, but the intent behind this is unclear, especially given the definition of engagement above.
+The rules do say that unengaged characters move in a separate phase before engaged ones, but the intent behind this is unclear, especially given the definition of engagement above.
 
 #### Rivers of Sartar House Rules
 
 In Rivers of Sartar:
 
-the expansive definition of engagement used in the Rules Q+A is used, so anyone aware they are targetted by a missile weapon or spell counts as engaged.
-'unengaged' characters are not a special case; they are just by themselves in a 1-character engagement. So they act in the normal player order, rather than in a seperate phase.
+- the expansive definition of engagement used in the Rules Q+A is used, so anyone aware they are targeted by a missile weapon or spell counts as engaged.
+
+- 'unengaged' characters are not a special case; they are just by themselves in a 1-character engagement. So they act in the normal player order, rather than in a separate phase.
+
 To determine engagement, simply go left to right amongst PCs, and ask them in turn which of the available opponents they will attempt to deal with. They may choose to fight just one, several, join an existing engagement, or just hang back and not commit to fighting. Engaging more than perhaps 4 opponents is likely to require special circumstances, such as an area attack.
 
-Once all PCs have chosen, any unengaged opponents choose who they will engage. They may gang up on someone in the front line, shoot at someone who chose to hang back and heal, or anything else the GM thinks is tactically plausible. The players should naturally strive to enage as many opponents as possible to deny them that choice.
+Once all PCs have chosen, any unengaged opponents choose who they will engage. They may gang up on someone in the front line, shoot at someone who chose to hang back and heal, or anything else the GM thinks is tactically plausible. The players should naturally strive to engage as many opponents as possible to deny them that choice.
 
 In the case of a successful coordinated ambush, the opponents may get to choose engagements first, leaving PCs with little choice of who they are fighting. Be aware this will only increase the lethality of such a situation. 
 
