--- a/markdown/rivers/5.3_Attacking.md
+++ b/markdown/rivers/5.3_Attacking.md
@@ -4,11 +4,23 @@
 
 #### Weapon Skills
 
-In RQ:G, each melee weapon has its own specific skill, which may be used to attack or parry.
+In RQ:G, each melee weapon has its own specific skill, which may be used to attack or parry. During character generation, homelands, occupations and cults can add to the rating of selected weapon skills,. When this does not correspond to a specific weapon, but to a group of weapon, then the specific weapon skill to be modified must be selected at character generation time. So for example '1H Axe +15%' means to add 15 points to the rating of any 1 handed axe skill, i.e. Battler Axe, Small Axe, Pick Axe, etc.
 
-[Weapon Categories](pngs/
+![](meleeWeaponCategories.png)
 
 These weapon skills are grouped into _categories_. The diagrams above and below illustrates most weapon categories listed in [Weapons and Equipment](https://www.chaosium.com/runequest-weapons-equipment-hardcover/).
 
+![](missileWeaponCategories.png)
+
+Weapons within the same category are counted as similar, so they can be used at half chance. So if a PC has Battle Axe 80%, they can use a small axes with a rating of 40%.
 
 
+#### Grappling
+
+### Rivers of Sartar House Rules
+
+#### Weapon Skills
+
+#### Techniques
+
+#### Grappling
