Added dara happa diagram

--- a/markdown/rivers/5.3_Attacking.md
+++ b/markdown/rivers/5.3_Attacking.md
@@ -1,26 +1,26 @@
 ## Attacking
 
-### Rules as Written
 
-#### Weapon Skills
+### Weapon Skills
 
-In RQ:G, each melee weapon has its own specific skill, which may be used to attack or parry. During character generation, homelands, occupations and cults can add to the rating of selected weapon skills,. When this does not correspond to a specific weapon, but to a group of weapon, then the specific weapon skill to be modified must be selected at character generation time. So for example '1H Axe +15%' means to add 15 points to the rating of any 1 handed axe skill, i.e. Battler Axe, Small Axe, Pick Axe, etc.
+As in RQ:G, each melee weapon has its own specific skill, which may be used to attack or parry. During character generation, homelands, occupations and cults can add to the rating of selected weapon skills. When this does not correspond to a specific weapon, but to a group of weapons, then the specific weapon skill to be modified must be selected at character generation time. So for example '1H Axe +15%' means to add 15 points to the rating of any 1 handed axe skill, i.e. Battler Axe, Small Axe, Pick Axe, etc.
 
 ![](meleeWeaponCategories.png)
 
-These weapon skills are grouped into _categories_. The diagrams above and below illustrates most weapon categories listed in [Weapons and Equipment](https://www.chaosium.com/runequest-weapons-equipment-hardcover/).
+These weapon skills are grouped into _categories_. The diagrams above illustrates most weapon categories listed in [Weapons and Equipment](https://www.chaosium.com/runequest-weapons-equipment-hardcover/).
 
-![](missileWeaponCategories.png)
+Weapons within the same category are counted as similar, so they can be substituted. If this is unexpected, this use is at a disadvantage, until a week is spent familiarising with that weapon. For example, an Odaylan who regularly transforms into a bear can use their fist skill to make a claw attack without penalty.
 
-Weapons within the same category are counted as similar, so they can be used at half chance. So if a PC has Battle Axe 80%, they can use a small axes with a rating of 40%.
+Weapons that can be used in multiple ways (such as an axe or spear that can be used one handed or two-handed) use a single skill, but have different statistics depending on how they are used. So a thrown javelin will do a different amount of damage than one used as a spear.
+
+#### Special and critical hits
+
+Special hits pick one of the options below. Critical hits pick two.
+
+ - choose hit location, instead of rolling randomly.
+ 
+ - ignore armour on the location hit.
+ 
+ - roll and add one extra dice of any type already rolled for damage. So a shortsword that does D6+1 will do 2D6+1 if this option is picked.
 
 
-#### Grappling
-
-### Rivers of Sartar House Rules
-
-#### Weapon Skills
-
-#### Techniques
-
-#### Grappling
