--- a/markdown/rivers/5.4_Defending.md
+++ b/markdown/rivers/5.4_Defending.md
@@ -10,12 +10,11 @@ Unlike a general opposed roll, each defensive skill works slightly differently, 
   
   Shields may be used to parry ranged or melee weapons. Other weapons types can only parry melee weapons.
 
-- *Dodge*: uses the corresponding skill, which starts at DEXx3, to avoid one or more incoming attacks. A number of attacks can be dodged equal to the success level rolled. As with parries, the attacks that is dodged is selected by 
-  the defender after all attacks have been rolled for. However, only a single level of success may be applied to any one attack. Excess 
+- *Dodge*: uses the corresponding skill, which starts at DEXx2, to avoid one or more incoming attacks. A number of attacks can be dodged equal to the success level rolled. As with parries, the attacks that is dodged is selected by the defender after all attacks have been rolled for. However, only a single level of success may be applied to any one attack. Excess 
   
-  Ranged or melee attacks may be dodged. Dodging requires freedom of movement and so may not be performed if in a close order formation (i.e. shield wall or phalanx) or wearing heavy armnour.
+  Ranged or melee attacks may be dodged. Dodging requires freedom of movement and so may not be performed if in a close order formation (i.e. shield wall or phalanx).
   
-- *Grapple*: uses the corresponding skill to take hold them of an attacker's arm or weapon in such a way that they cannot deliver an effective strike.
+- *Grapple*: uses the corresponding skill to take hold of an attacker's arm or weapon in such a way that they cannot deliver an effective strike.
   Grappling only effects a single opponent, who must be selected in advance, before attack dice are rolled. Any excess successes on a grapple roll, above those required to negate an attack, 
   may be 'banked' as *grapple points*. This allows them to be used on a later round.
    
@@ -23,7 +22,7 @@ Unlike a general opposed roll, each defensive skill works slightly differently, 
   
   Grappling requires both hands free, meaning it can only be combined with unarmed attacks. 
   
-  Saved grapple points may be used to increase the success level of a grapple or unarmed combat roll.
+  Saved grapple points may be used to increase the success level of a subsequent grapple or unarmed combat roll. Spending points on an attacks represents throwing the opponent; they are no longer grappled. They
   
 - *Spirit Combat* allows a discorporate entity to quickly fade into the spirit realm to avoid the attacks of a magic weapon. It can also be used by anyone to defend against spirit combat attacks. 
   Each level of success subtracts from the success level of one or more attackers, without any special restriction.
@@ -34,4 +33,6 @@ However, they still take one regular hit from the B. Had they rolled only a regu
 If they had instead chosen to dodge, they could choose to negates B's hit *and* converts C's into a regular success. 
 However, they still take one regular hit from C. Had they rolled only a regular success, they would have taken two regular hits.
 
-If they had instead chosen to grapple A, they would gain two grapple points on them. Having survived the hits of B and C, they choose to perform an unarmed attack on A, using both grapple points to boost their success level. They roll a regular success, and A fails thire defensive grapple rol.ll.
+If they had instead chosen to grapple A, they would gain two grapple points on them. Having survived the hits of B and C, they choose to perform an unarmed attack on A, using both grapple points to boost their success level. They roll a regular success, and A fails their defensive grapple roll. With spending 2 grapple points, this corresponds to a critical success. As all grapple points have been spent, they throw their opponent to the ground. As the attack is a critcal, they choose to do their normal unarmed damage + D6, ignoring armour.  
+
+As they are not discorporate, they cannot use spirit combat as a defence.
